--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+*.db
+*.sh
+legacy/
+bot_webserver.py
+screen_command.txt
+screenlog
+spotify_credentials.py
+
+
+# GitHub Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
