--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ bot_webserver.py
 screen_command.txt
 screenlog
 spotify_credentials.py
-
+.vscode/
 
 # GitHub Python template
 # Byte-compiled / optimized / DLL files
